# PROJET-Ratio_IMAC2

./: CMakeLists.txt  readme.md
examples/: CMakeLists.txt
examples/src/: documentation.cpp  examples.cpp  main.cpp  mainMaths.cpp  pocketCalculator.cpp
myCode1/: CMakeLists.txt
myCode1/include/: plop.hpp
myCode1/src/: main.cpp  plop.cpp
myCode3/src/: main1.cpp  main2.cpp
myLib/: CMakeLists.txt
myLib/doc/: CMakeLists.txt  Doxyfile-html.cmake
myLib/include/: Doxygen.hpp  Ratio.hpp  RatioException.hpp  expLn.hpp
myLib/src/: Ratio.cpp  RatioException.cpp
myTest/: CMakeLists.txt
myTest/include/: constructor.hpp  cosSinTan.hpp  divise.hpp  diviseEqual.hpp  expLn.hpp  intPart.hpp  minus.hpp  minusEqual.hpp  multiple.hpp  multipleEqual.hpp  plus.hpp  plusEqual.hpp  pow.hpp
myTest/src/: constructor.cpp  cosSinTan.cpp  divise.cpp  expLn.cpp  intPart.cpp  mainTest.cpp  minus.cpp  multiple.cpp  plus.cpp  pow.cpp  sample_test.cpp
